--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "^13.8.0",
+    "react-native-url-polyfill": "^1.3.0",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
