--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
+    "@reduxjs/toolkit": "^1.9.3",
     "@sanity/client": "^5.2.2",
     "@sanity/image-url": "^1.0.2",
     "expo": "~47.0.12",
@@ -23,6 +24,7 @@
     "react-native-screens": "~3.18.0",
     "react-native-svg": "^13.8.0",
     "react-native-url-polyfill": "^1.3.0",
+    "react-redux": "^8.0.5",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
